--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -11,6 +11,10 @@
         <Button style="@style/menu_button"
                 android:text="@string/increase_degree_button"
                 android:onClick="increaseDegreeHandler"/>
+        <Button android:id="@+id/edit_points_button"
+                style="@style/menu_button"
+                android:text="@string/edit_points_button"
+                android:onClick="editPointsHandler"/>
         <Button style="@style/menu_button"
                 android:text="@string/exit_button"/>
     </LinearLayout>
